--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </section>
   <section class="u-align-center u-clearfix u-gradient u-section-2" id="carousel_5e45">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="https://t.me/bhoikfost_yahya"
+      <a href="https://t.me/anggun2"
         class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-29 u-btn-1">Telegram</a>
       <div class="u-align-left u-border-10 u-border-white u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
