--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="Lite version, Autos​cript">
   <meta name="description" content="">
-  <title>Autos​cript</title>
+  <title>ANGGUN-SCRIPT</title>
   <link rel="shortcut icon" href="images/2637164.png">
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Home.css" media="screen">
@@ -37,8 +37,8 @@
   <header class="u-clearfix u-header" id="sec-b1dc">
     <div
       class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-      <h1 class="u-align-left-xs u-custom-font u-text u-title u-text-1">bhoikfost<span style="font-weight: 400;">
-          &nbsp;</span>yahya
+      <h1 class="u-align-left-xs u-custom-font u-text u-title u-text-1">ANGGUN-NET<span style="font-weight: 400;">
+          &nbsp;</span>FREE
       </h1>
     </div>
   </header>
@@ -48,17 +48,17 @@
       <h1 class="u-custom-font u-text u-text-white u-title u-text-1">Lite version</h1>
       <h1
         class="u-custom-font u-font-georgia u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-title u-text-2">
-        Autos​cript</h1>
+        ANGGUN-SCRIPT</h1>
       <p class="u-large-text u-text u-text-variant u-text-white u-text-3"> autoscript vps xray multi port installer
         successfully installed and ​​working.&nbsp;<br>This autoscript can be used by Debian 9+/Ubuntu 18.04+/20+,
         no license and free to install please<br>feel the sensation of connection with private
       </p>
-      <p class="u-large-text u-text u-text-variant u-text-4">busines email : bhoikfostyahya@gmail.com</p>
+      <p class="u-large-text u-text u-text-variant u-text-4">busines email : arismar.amar@gmail.com</p>
     </div>
   </section>
   <section class="u-align-center u-clearfix u-gradient u-section-2" id="carousel_5e45">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="https://t.me/anggun2"
+      <a href="https://t.me/amantubilah"
         class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-29 u-btn-1">Telegram</a>
       <div class="u-align-left u-border-10 u-border-white u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
@@ -119,7 +119,7 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2
         class="u-custom-font u-font-georgia u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">
-        AUTOSCRIPT LITE</h2>
+        ANGGUN-SCRIPT </h2>
       <p
         class="u-custom-font u-font-montserrat u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">
         Jangan takut awan mengambang menutupi matamu, mata emas bersinar seperti obor di langit</p>
@@ -187,7 +187,7 @@
       </div>
       <h2
         class="u-custom-font u-font-georgia u-text u-text-black u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-15">
-        CONTOH AUTOSCRIPT LITE</h2>
+        ANGGUN-SCRIPT </h2>
     </div>
   </section>
 </body>
